remove overflow to prevent ugly scrollbar

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -55,7 +55,6 @@
     @include vertical-padding(8rem);
 
     height: 100%;
-    overflow-y: scroll;
     display: flex;
   }
 
